fix styling - spacing & dynamic border

--- a/src/app/components/swapped-top-opportunities/static-topOpportunities.component.scss
+++ b/src/app/components/swapped-top-opportunities/static-topOpportunities.component.scss
@@ -38,5 +38,4 @@ $nudge: 3rem;
 
 .swap-card.two {
   background: rgba(77, 77, 77, 0.10);
-  border: 1px solid rgba(229, 229, 229, 0.5);
 }
